--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vueapp</title>
+    <title>Vue App</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+   </body>
 </html>
